# sphericalConvexHull

./: CMakeLists.txt  README.md  sphericalConvexHull.cpp
data/: nuclei_centroids.txt
inc/: dDimensionalIVec.h  dDimensionalVectorTypes.h  functions.h  indexer.h  periodicBoundaryConditions.h  simpleUtilities.h  sphericalDomain.h  std_include.h
model/: CMakeLists.txt  convexHullCGAL.cpp  convexHullCGAL.h  sphericalModel.cpp  sphericalModel.h
